# Spring23-Lift

./: .gitignore  .gitmodules  Dockerfile-utcdusxyolo  LICENSE  Makefile  README.md  docker-compose.yaml  environment.yml  requirements.txt  requirements.yml
additional_tools/imageGeneration/: README.md  generateSampleImages_png.py  generateSampleImages_svg.py  generateSampleV2Images_svg.py
classification_filter/cpp/: README.md
classification_filter/include/: euclideanSpaceTools.h
classification_filter/python/: debugTools.py  decodeConst.py  decodeImage.py  decodeTools.py  decodeV2Image.py  drawingTools.py  euclideanSpaceTools.py  metrics2D.py
classification_filter/src/: CMakeLists.txt  decodeImage.cxx  decodeImage.py  drawingTools.py
docker/: Dockerfile-utcdusxyolo  Makefile  docker-compose.yaml  requirements.txt
src/: Makefile  detectc.py  idenificationConst.py  identificationStack.py  main.py  runFlightTest_0_Identification.py  runFlightTest_1_Identification.py  runHWILIdentificationStream.py  runIRSIdentification.py  runIdentification.py  runSIIdentification.py  veronteCommServer.cpp
src/classification_filter/: .gitignore  decodeImage.py
src/data/: .gitignore
src/detection_nnetwork/: Makefile  detectc.py
src/identification_stack/: identificationStack.py
src/include/: udp.h
src/marker_localization/: calcTruth.py  calibrationConst.py  process_measurements.py  transformations.py
unity_perception/: .gitignore
unity_perception/Assets/: CustomRandomizer.cs  Marker IdLabelConfig.asset  New Terrain 1.asset  New Terrain 2.asset  New Terrain 3.asset  (+5 more)
(+55 files in other folders)
